Fixed spacing in page viewer

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -129,3 +129,7 @@ a:link    { color: #06c }  /* unvisited links */
 a:visited { color: #06c }  /* visited links   */
 a:hover   { color: #c00 }  /* user hovers     */
 a:active  { color: #06c }  /* active links    */
+
+.iwm-content {
+	margin-top: 1em;
+}
